# otus-patterns

./: pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
homework_1/: main.py
homework_10/: command.py  consumer.py  state.py
homework_2/: angle.py  command.py  move.py  rotate.py  vector.py
homework_3/: exception_handler.py  main.py
homework_3/commands/: add_queue.py  log.py  retry.py
homework_4/commands/: burn_fuel.py  change_velocity.py  check_burn_fuel_move.py  check_fuel.py  check_velocity.py  rotate_change_velocity.py
homework_4/space_objects/: movable_refueled.py  movable_rotatable.py  refueled.py
homework_5/: commands.py  ioc.py
homework_6/: adapter.py
homework_7/: consumer.py  hard_stop.py  soft_stop.py
lesson_3/: main.py
pytest/: test_solve.py
tests/: test_home_work_1.py  test_solve.py
tests/homework_1/: test_homework_1.py
tests/homework_10/: test_state.py
tests/homework_2/: test_move.py  test_rotate.py
tests/homework_3/: test_exception_handler.py
tests/homework_4/: test_burn_fuel.py  test_change_velocity.py  test_check_burn_move.py  test_check_fuel.py  test_macro_command.py  test_rotate_change_velocity.py
tests/homework_5/: test_ioc.py
tests/homework_6/: test_adapter.py
tests/homework_7/: test_consumer.py
